# PyDevAz

./: .gitignore  README.md  alembic.ini  depencies.py  pomodoro.db  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 1714c4673635_added_account_table.py  5d38c342fac2_added_account_table.py  6a698ef06780_added_account_table.py  7690f6b33576_added_account_table.py  8ddbcd787cc9_added_account_table.py  cd92deabbde5_added_account_table.py  d7e0081b3567_added_account_table.py  ed25ae069c2e_added_account_table.py  f123ca66c690_added_account_table.py
database/: __init__.py  models.py  settings.py
handlers/: ping.py  tasks.py
repository/: task.py
shema/: settings.py
